--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <!-- Photo -->
     <div class="container px-5">
         <div id="avatar">
-            <img class="shadow" src="static/assets/img/photome.png">
+            <img class="shadow" src="static/assets/img/photome.jpg">
         </div>
     </div>
     <!-- Photo -->
