--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <a class="nav-link me-lg-3" href="#home">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#hciproject">HCIPROJECT</a>
+                        <a class="nav-link me-lg-3" href="#experience">HCIPROJECT</a>
                     </li>
                 </ul>
             </div>
@@ -134,16 +134,16 @@
     <!-- Home -->
 
 
-    <!-- hciproject -->
-    <section class="bg-gradient-primary-to-secondary-dark mt5 md5" id="hciproject">
+    <!-- experience -->
+    <section class="bg-gradient-primary-to-secondary-dark mt5 md5" id="experience">
         <div class="container px-5">
             <header>
                 <h2 id="hciproject-subtitle"><i class="bi bi-briefcase-fill"></i> HCIPROJECT </h2>
             </header>
-            <div class="main-body" id="hciproject-md"></div>
+            <div class="main-body" id="experience-md"></div>
         </div>
     </section>
-    <!-- hciproject -->
+    <!-- experience -->
 
 
 
