--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <a class="nav-link me-lg-3" href="#home">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#experience">HCIPROJECT</a>
+                        <a class="nav-link me-lg-3" href="#hciproject">HCIPROJECT</a>
                     </li>
                 </ul>
             </div>
@@ -134,16 +134,16 @@
     <!-- Home -->
 
 
-    <!-- experience -->
-    <section class="bg-gradient-primary-to-secondary-dark mt5 md5" id="experience">
+    <!-- hciproject -->
+    <section class="bg-gradient-primary-to-secondary-dark mt5 md5" id="hciproject">
         <div class="container px-5">
             <header>
-                <h2 id="hciproject-subtitle"><i class="bi bi-briefcase-fill"></i> HCIPROJECT </h2>
+                <h2 id="hciproject-subtitle"><i class="bi bi-briefcase-fill"></i> HCI PROJECT </h2>
             </header>
-            <div class="main-body" id="experience-md"></div>
+            <div class="main-body" id="hciproject-md"></div>
         </div>
     </section>
-    <!-- experience -->
+    <!-- hciproject -->
 
 
 
@@ -155,7 +155,7 @@
                 <a id="github-link" href="https://github.com/voiresa">Github</a>
                 <span class="mx-1">&middot;</span>
                 <a id="license-link"
-                    href="https://github.com/voiresa/Voiresa.github.io/blob/main/LICENSE">License</a>
+                    href="https://github.com/voiresa/voiresa.github.io/blob/main/LICENSE">License</a>
             </div>
         </div>
     </footer>
